personal site update

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -12,7 +12,7 @@
     <div id="content">
         <header>
             <a id="logo-link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Petal Pantry Logo"> 
+                <img class="logo" src="images/logo.png" alt="Petal Pantry Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -25,10 +25,11 @@
             <img id="banner-img" src="images/flowereshop.jpg" alt="flowershop counter">
         </div>
         <main class="home-grid">
-            <div id="workbench">
+            <section class="workbench">
                 <img class="workbench-pic" src="images/workbench.jpg" alt="flower workbench">
-            </div>
-            <section id="mission">
+                <h6>pic</h6>
+            </section>
+            <section class="mission">
                 <h1>Flowers for any occasion</h1>
                 <p>
                     We understand that life can be crazy sometimes, and flowers are usually only thought of for special
@@ -41,10 +42,11 @@
                     busy lives, that’s where we come into play by making ordering flowers online easier.
                 </p>
             </section>
-            <div id="bouquet">
+            <section class="bouquet">
                 <img class="bouquet-pic" src="images/prepare.jpg" alt="flower being prepared">
-            </div>
-            <section id="aboutus">
+                <h6>pic</h6>
+            </section>
+            <section class="aboutus">
                 <h1>About Us</h1>
                 <p>
                     The Petal Pantry has been serving Provo and the surroding areas for over 20 years. Chad Hulet over
@@ -56,9 +58,9 @@
             </section>
         </main>
         <footer>
-            <h3>Petal Pantry &copy; 2022 - Tyler Hulet</h3>
+            <h1>Petal Pantry &copy; 2022 - Tyler Hulet</h1>
             <h3><a href="site-plan.html">Site-Plan</a></h3>
-            <h3>If you need more info please call: 801-374-1000</h3>
+            <h2>If you need more info please call: 801-374-1000</h2>
             <div id="social">
                 <a href="https://facebook.com" target="blank">
                     <img src="images/facebook.png" alt="facebook icon">
