Home page complete

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal site home page</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                 <h6>pic</h6>
             </section>
             <section class="mission">
-                <h1>Flowers for any occasion</h1>
+                <h2>Flowers for any occasion</h2>
                 <p>
                     We understand that life can be crazy sometimes, and flowers are usually only thought of for special
                     occasions. That’s just not true, they are perfect for any occasion, and they are great for any time
@@ -46,20 +47,23 @@
                 <h6>pic</h6>
             </section>
             <section class="aboutus">
-                <h1>About Us</h1>
+                <h2>About Us</h2>
                 <p>
                     The Petal Pantry has been serving Provo and the surroding areas for over 20 years. Chad Hulet over
                     the
-                    years has growne this small family owned bunsiness into one that is recongized across the state. he
-                    has
-                    done this by paying attetion to small details and helping people acheive there flower dreams.
+                    years has growne this small family owned bunsiness into one that is recongized across the state. no
+                    matter the siuation that you need flowers he will delver excatly what you want and even help you
+                    realize somethings you did not know you wanted.
+                    He does this by paying attetion to small details and helping people acheive there flower dreams, no
+                    matter where it is taking place wheather thats a simple outdoor wedding, an elaborate venue. even
+                    during those time of mourning he shows respect in all situations.
                 </p>
             </section>
         </main>
         <footer>
-            <h1>Petal Pantry &copy; 2022 - Tyler Hulet</h1>
-            <h3><a href="site-plan.html">Site-Plan</a></h3>
-            <h2>If you need more info please call: 801-374-1000</h2>
+            <h1> Petal Pantry &copy; 2022 - Tyler Hulet </h1>
+            <h3> <a href="site-plan.html">Site-Plan</a> </h3>
+            <h2>Feel free to give us a call for any questions at 801-374-1000. </h2>
             <div id="social">
                 <a href="https://facebook.com" target="blank">
                     <img src="images/facebook.png" alt="facebook icon">
