--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -59,6 +59,16 @@
                     during those time of mourning he shows respect in all situations.
                 </p>
             </section>
+            <div class="card">
+                <img src="images/profile.jpg" alt="John" style="width:100%">
+                <h1>Chad Hulet</h1>
+                <p class="title">Owner and designer</p>
+                <p>Petal Pantry</p>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <p><button>Contact</button></p>
+            </div>
         </main>
         <footer>
             <h1> Petal Pantry &copy; 2022 - Tyler Hulet </h1>
