--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -73,7 +73,7 @@
         <footer>
             <h1> Petal Pantry &copy; 2022 - Tyler Hulet </h1>
             <h3> <a href="site-plan.html">Site-Plan</a> </h3>
-            <h2>Feel free to give us a call for any questions at 801-374-1000. </h2>
+            <h2> Call us for any questions at 801-374-1000. </h2>
             <div id="social">
                 <a href="https://facebook.com" target="blank">
                     <img src="images/facebook.png" alt="facebook icon">
