--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -71,7 +71,7 @@
         </div>
         <section class="feb-info">
             <h6>feb</h6>
-            <p><strong>Valtines day / anniversary</strong></p>
+            <p><strong>Valentines day / Anniversary</strong></p>
             <p>
                 Nothing says you love your significant other on Valentine's Day or your anniversary like fresh flowers.
                 No matter what kind
