personal site complete

--- a/personalsite/special-occasions.html
+++ b/personalsite/special-occasions.html
@@ -23,13 +23,13 @@
     </header>
     <main class="occasion-grid">
         <div id="wedding1">
-            <img src="images/wedding.jpg" alt="brid holding flowers">
+            <img src="images/wedding.jpg" alt="bride holding flowers">
         </div>
         <div id="wedding2">
             <img src="images/wedding-cake.jpg" alt="wedding cake">
         </div>
         <div id="wedding3">
-            <img src="images/center-piece.jpg" alt="center peice flower">
+            <img src="images/center-piece.jpg" alt="center piece flower">
         </div>
         <div id="wedding4">
             <img src="images/hand-corsages.jpg" alt="white rose corsages">
