--- a/personalsite/sympathy.html
+++ b/personalsite/sympathy.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sympathy page</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -21,8 +22,8 @@
         </nav>
     </header>
     <main class="sympathy-grid">
-        <section id="funeral-info">
-            <h6>funeral</h6>
+        <section class="funeral-info">
+            <h2>Funeral</h2>
             <p>
                 It's never an easy when you lose a loved one, but a funeral should be celebration of life. There for the
                 flowers should be an extension in every aspect. From the casket mount to the easel even down to the
@@ -35,12 +36,23 @@
                 to add it to the card. Other wise we will add something appropriate to the card.
             </p>
         </section>
-        <img src="images/containers.jpg" alt="container of flowers">
-        <img src="images/casketmount.jpg" alt="casket mount">
-        <img src="images/funeral-easel.jpg" alt="simple easel">
+        <section class="container">
+            <img src="images/containers.jpg" alt="container of flowers">
+            <h2>a simple container</h2>
+        </section>
 
-        <section id="getwell-info">
-            <h6>getwell</h6>
+        <section class="casket">
+            <img src="images/casketmount.jpg" alt="casket mount">
+            <h2>casket mount or spray</h2>
+        </section>
+
+        <section class="easel">
+            <img src="images/funeral-easel.jpg" alt="simple easel">
+            <h2>an example of a easel</h2>
+        </section>
+
+        <section class="getwell-info">
+            <h2>Get Well</h2>
             <p>
                 Being in sick is never a fun experience. That's where our flowers come into play, because whether there
                 in the
@@ -54,11 +66,20 @@
                 But we also
                 offer the option to add something simple if you don't provide something for the card.
             </p>
-        </section>
-        <img src="images/h-flowers.jpg" alt="bright flowrs">
-        <img src="images/getwell.jpg" alt="get well flowrs">
-        <img src="images/hospital-flowers.jpg" alt="hospital flowers">
 
+        </section>
+        <section class="bright">
+            <img src="images/h-flowers.jpg" alt="bright flowrs">
+            <h2>bouquet of lily's</h2>
+        </section>
+        <section class="get-well">
+            <img src="images/getwell.jpg" alt="get well flowrs">
+            <h2>small arrangement of flowers</h2>
+        </section>
+        <section class="hospital">
+            <img src="images/hospital-flowers.jpg" alt="hospital flowers">
+            <h2>a simple hospital bouquet</h2>
+        </section>
     </main>
     <footer>
         <h3>Petal Pantry &copy; 2022 - Tyler Hulet</h3>
