--- a/personalsite/sympathy.html
+++ b/personalsite/sympathy.html
@@ -52,7 +52,7 @@
         </section>
 
         <section class="getwell-info">
-            <h2>Get Well</h2>
+            <h2>Get Well Soon</h2>
             <p>
                 Being in sick is never a fun experience. That's where our flowers come into play, because whether there
                 in the
